--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "url": "git+https://github.com/trump-barometer/data-retrieval.git"
   },
   "author": "",
-  "license": "GNU General Public License v3.0",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/trump-barometer/data-retrieval/issues"
   },
   "homepage": "https://github.com/trump-barometer/data-retrieval#readme",
   "devDependencies": {
     "nodemon": "^2.0.3"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "mysql2": "^2.1.0",
+    "twitter": "^1.7.1"
   }
 }
