--- a/.env_example
+++ b/.env_example
@@ -1,10 +1,8 @@
-# MySQL Database
-DB_HOST =''
-DB_USER =''
-DB_DATABASE =''
-
 # Twitter API
 TW_CONSUMER_KEY = ''
 TW_CONSUMER_SECRET = ''
 TW_ACCESS_TOKEN_KEY = ''
 TW_ACCESS_TOKEN_SECRET = ''
+
+# MongoDB Database
+DATABASE_URL = ''
