Integrated a REST API interface.

--- a/.env_example
+++ b/.env_example
@@ -1,8 +1,11 @@
+# REST API
+REST_PORT = 80
+
+# MongoDB Database
+DATABASE_URL = mongodb://localhost/trumpbarometer
+
 # Twitter API
 TW_CONSUMER_KEY = ''
 TW_CONSUMER_SECRET = ''
 TW_ACCESS_TOKEN_KEY = ''
 TW_ACCESS_TOKEN_SECRET = ''
-
-# MongoDB Database
-DATABASE_URL = ''
