--- a/.env_example
+++ b/.env_example
@@ -9,3 +9,9 @@ TW_CONSUMER_KEY = ''
 TW_CONSUMER_SECRET = ''
 TW_ACCESS_TOKEN_KEY = ''
 TW_ACCESS_TOKEN_SECRET = ''
+
+# Alpha Vantage API
+AV_API_KEY = ''
+
+# Smp Cloud API
+SC_API_KEY = ''
