Update historical csv files. Some optimazations.

--- a/.env_example
+++ b/.env_example
@@ -4,6 +4,14 @@ REST_PORT = 80
 # MongoDB Database
 DATABASE_URL = mongodb://localhost/trumpbarometer
 
+
+# ----- Twitter Account Name -----
+
+TW_ACCOUNT_NAME = ''
+
+
+# ----- API KEYS -----
+
 # Twitter API
 TW_CONSUMER_KEY = ''
 TW_CONSUMER_SECRET = ''
