REST API removed. Several Bugs fixed.

--- a/.env_example
+++ b/.env_example
@@ -1,9 +1,11 @@
-# REST API
-REST_PORT = 80
+# MongoDB Database (mongodb://username:password@host:port/database)
+DATABASE_URL = mongodb://username:password@localhost/trumpbarometer
 
-# MongoDB Database
-DATABASE_URL = mongodb://localhost/trumpbarometer
+# Tweet Retrieving Interval (in min)
+TW_INTERVAL = 0
 
+# Indize Retrieving Interval (in min)
+IN_INTERVAL = 0
 
 # ----- Twitter Account Name -----
 
@@ -22,4 +24,7 @@ TW_ACCESS_TOKEN_SECRET = ''
 AV_API_KEY = ''
 
 # Smp Cloud API
-SC_API_KEY = ''
+SC_API_KEY_ONE = ''
+SC_API_KEY_TWO = ''
+SC_API_KEY_THREE = ''
+SC_API_KEY_FOUR = ''
